--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/plugin-transform-parameters": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@vue/compiler-sfc": "^3.2.12",
     "ava": "^3.15.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
@@ -61,9 +62,8 @@
     "terser-webpack-plugin": "^5.1.1",
     "tulind": "^0.8.18",
     "vue-codemirror": "^4.0.6",
-    "vue-loader": "^15.9.6",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.12",
+    "vue-loader": "^16.5.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
@@ -76,6 +76,6 @@
     "hamsterjs": "^1.1.3",
     "lz-string": "^1.4.4",
     "moment": "^2.29.1",
-    "vue": "^2.6.12"
+    "vue": "^3.2.12"
   }
 }
